--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+--------------------------------------------------------------------------
+TECHITHON 2026 | OFFICIAL SOURCE CODE
+--------------------------------------------------------------------------
+ 
+Designed & Developed by: Vijay Sangani
+    
+Contributors: Mayank Bhuvad, Shlok Nair, Yug Sawant
+
+version: 1.0.0
+
+(c) 2026 All Rights Reserved.
+-->
 
 <!DOCTYPE html>
 <html lang="en">
