--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 TECHITHON 2026 | OFFICIAL SOURCE CODE
 --------------------------------------------------------------------------
  
-Designed & Developed by: Vijay Sangani
-    
-Contributors: Mayank Bhuvad, Shlok Nair, Yug Sawant
+Designed & Developed by: Vijay Sangani, Mayank Bhuvad, Shlok Nair, Yug Sawant
 
 version: 1.0.0
 
